fixed overflowing text

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ div.after-site-topper{
 }
 
 div.site-topper nav{
+  background-color: rgba(207, 207, 207, 1);
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -429,14 +430,12 @@ div.main-content{
     background-color: rgba(207, 207, 207, 1);
     padding: 1.5rem 1rem;
     border-radius: 1rem;
-    min-width: 25vw;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     text-align: center;
     box-shadow: 0 0 15px 2px black;
-    max-width: 50%;
     position: absolute;
     top: 1rem;
     right: 1rem;
